fixing banner and button sizes (on mobile)

--- a/source/stylesheets/components/feedback-banner.scss
+++ b/source/stylesheets/components/feedback-banner.scss
@@ -5,6 +5,7 @@
   padding-bottom:10px;
   display: flex;
   justify-content: center;
+  align-items: center;
   color:white
 }
 
@@ -12,6 +13,7 @@
   margin-left: 10px;
   background-color: #5784f7;
   border-color: #5784f7;
+  height: 35px;
 
   &:hover {
     background-color: darken(#5784f7, 10%);
